standardising requests
